# ladim

./: .gitignore  .travis.yml  CHANGELOG.md  NOTATER  README.md  README.rst  pytest.ini  setup.cfg
.github/scripts/: changelog.sh  version.sh
.github/workflows/: action_changelog.yml  action_pypi_compile.yml  action_pypi_deploy.yml  action_pytest.yml  action_sphinx_compile.yml  action_sphinx_deploy.yml  develop.yml  pypi.yml  release.yml  sphinx.yml  testing.yml  versions.yml  workflow_deploy.yml  workflow_develop.yml  workflow_pull_request.yml
doc/source/: application.rst  articles.rst  conf.py  configuration.rst  forcing_plugin.rst  grid_plugin.rst  ibm_plugin.rst  intro.rst  library.rst  manual.rst  output.rst  output_plugin.rst  plugin.rst  postprocessing.rst  release.rst
examples/backwards/: README  animate.py  ladim2.yaml  make_release.py
examples/circle/: README  trajectory.py
examples/gosouth/: animate.py  gosouth_ibm.py  ladim2.yaml
examples/killer/: README.rst  animate.py  animate_dense.py  dense.yaml  killer_ibm.py  ladim2.yaml  make_release.py
examples/lakselus/: NOTATER  adapt.yaml  animate.py  animate_dense.py  control.py  dense.yaml  ladim.yaml  ladim1.yaml  make_release.py  reverse.yaml  salmon_lice_ibm.py
examples/latlon/: README.rst  animate.py  ladim2.yaml  make_coast.py  plot.py  plot0.py
examples/line/: README  adapt.yaml  animate.py  animate_dense.py  dense.yaml  ladim1.yaml  ladim2.yaml  line.py  line2.py  line3.py  line_output.py  make_coast_grid.py  make_release.py  plot.py  plot_cartopy.ipynb  plot_matplotlib.ipynb
examples/restart/: README.rst  animate.py  animate_split.py  make_release.py  restart.yaml  split.yaml  unsplit.yaml  verify.py
examples/station/: animate.py  ladim1.yaml  ladim2.yaml  plot.py
examples/stommel/: stommel.py  stommel2.py
examples/streak/: README  age_ibm.py  age_ibm.yaml  animate.py  animate_ibm.py  ladim2.yaml  plot.py
ladim/: __init__.py  __main__.py  config.py  forcing.py  grid.py  main.py  model.py  output.py  release.py  sample.py  solver.py  state.py  timestepper.py  tracker.py  utilities.py
ladim/configuration/: __init__.py  legacy.py  modularized.py
ladim/gridforce/: ROMS.py  __init__.py  analytical.py  legacy.py  zROMS.py
ladim/ibms/: __init__.py  legacy.py  legacy_ibm.py
ladim2/: ROMS.py  ROMS2.py  __main__.py  analytical.py  configure.py  forcing.py  grid.py  ibm.py  main.py  model.py  out_netcdf.py  output.py  release.py  sample.py  state.py  timekeeper.py  tracker.py  warm_start.py
test/: grid0.py  test_ROMS2_read.py  test_ROMS_read.py  test_ROMS_vertical.py  test_examples.py  test_forcing_ROMS.py  test_grid.py  test_grid_ROMS.py  test_main.py  test_output.py  test_release.py  test_sample.py  test_sdepth.py  test_state.py  test_timekeeper.py  test_tracker.py
tests/: test_config.py  test_forcing.py  test_grid.py  test_ladim.py  test_model.py  test_output.py  test_release.py  test_solver.py  test_utilities.py
(+28 files in other folders)
