[metadata]
name = ladim
version = 1.1
description = Lagrangian Advection and Diffusion Model
author = Bjørn Ådlandsvik
author_email = bjorn@imr.no
maintainer = Pål Næverlid Sævik
maintainer_email = paal.naeverlid.saevik@hi.no
url = https://github.com/pnsaevik/ladim
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,
    Programming Language :: Python :: 3.10,
    Operating System :: OS Independent,


[options]
packages =
    ladim
    ladim.gridforce
    postladim
install_requires =
    numpy
    pyyaml
    netCDF4
    pandas
python_requires = >=3.6

[options.entry_points]
console_scripts =
  ladim = ladim:run
