[metadata]
name = ladim
version = attr: ladim.__version__
description = Lagrangian Advection and Diffusion Model
author = Bjørn Ådlandsvik
author_email = bjorn@imr.no
maintainer = Pål Næverlid Sævik
maintainer_email = paal.naeverlid.saevik@hi.no
url = https://github.com/pnsaevik/ladim
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,
    Programming Language :: Python :: 3.10,
    Operating System :: OS Independent,


[options]
packages = find:
install_requires =
    numpy
    pyyaml
    netCDF4
    pandas
    xarray
    numba
python_requires = >=3.7

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
  ladim = ladim.main:run
