[metadata]
name = ladim
version = attr: ladim.__version__
description = Lagrangian Advection and Diffusion Model
author = Bjørn Ådlandsvik
author_email = bjorn@imr.no
maintainer = Pål Næverlid Sævik
maintainer_email = paal.naeverlid.saevik@hi.no
url = https://github.com/pnsaevik/ladim
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Operating System :: OS Independent


[options]
packages = find:
install_requires =
    netCDF4
    numpy
    pandas
    pyarrow
    pyproj
    pyyaml
    scipy
    xarray
python_requires = >=3.7

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
  ladim = ladim.main:run
